apps/angular/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-angular-ingress
  namespace: mywebapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  http:
       paths:
         - pathType: Prefix
           path: "/" 
           backend:
             service:
               name: app-angular
               port:
                 number: 80
